<resources>
    <string name="app_name">Ito</string>

    <!--LoginActivity-->
    <string name="login_text_login">Login</string>
    <string name="login_edit_email">Email</string>
    <string name="login_edit_password">Password</string>
    <string name="login_button_login">LOGIN</string>
    <string name="login_button_register">REGISTER</string>
    <string name="login_switch_remember_me">Remember Me?</string>

    <!--NavBar-->
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="nav_title_map">Map</string>
    <string name="nav_title_list">List</string>
    <string name="nav_title_account">Account</string>
    <string name="nav_title_settings">Settings</string>
    <string name="nav_label_username">Username</string>

    <!-- Main Activity -->
    <string name="main_title">Home</string>
    <string name="main_button_desc">Add new Event Button</string>

    <!-- View Event Frament -->
    <string name="view_event_join">Join Event!</string>
    <string name="view_event_label_description">Event Description</string>
    <string name="view_event_name">Event Name</string>
    <string name="view_event_close">Close</string>

    <!--Settings-->
    <string name="settings_button_logout">Sign out</string>

    <!-- -->
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>



    <!--Google Maps API Key-->
    <string name="google_maps_key">AIzaSyBSOLkfB1fKZLoECfsPifY0dEscK0wu-mk</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
