<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:checked="true"
            android:icon="@drawable/ic_map_white_24dp"
            android:title="@string/nav_title_map" />

        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_lists_white_24dp"
            android:title="@string/nav_title_list" />

        <item
            android:id="@+id/nav_account"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/nav_title_account" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/nav_title_settings" />
    </group>
</menu>