<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".model.EventViewFragment">

    <!-- TODO: Update blank fragment layout -->

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView2"
        android:layout_width="383dp"
        android:layout_height="276dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_view_event_close" />

    <TextView
        android:id="@+id/label_event_description"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/view_event_label_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_event_name2" />

    <TextView
        android:id="@+id/label_event_name2"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/view_event_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView2" />

    <TextView
        android:id="@+id/content_event_name2"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/label_event_name2"
        app:layout_constraintTop_toBottomOf="@+id/mapView2" />

    <EditText
        android:id="@+id/content_event_description"
        android:layout_width="219dp"
        android:layout_height="79dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toEndOf="@+id/label_event_description"
        app:layout_constraintTop_toBottomOf="@+id/content_event_name2" />

    <Button
        android:id="@+id/button_join_event"
        android:layout_width="165dp"
        android:layout_height="53dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="38dp"
        android:text="@string/view_event_join"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content_event_description" />

    <Button
        android:id="@+id/button_view_event_close"
        android:layout_width="72dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:text="@string/view_event_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>